Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26504

Registering (getting ABIs and version) of LLDBFrontend fails

XMLWordPrintable

    • Windows
    • 5cde121aaa5ebe110bb397c1ffba7b5b90f82782 (qt-creator/qt-creator/6.0)

      We need lldb support for Android. I am not yet sure which lldb frontend we want and will support, however, the one that comes with Android Studio (at least on Windows) seems to be be a good candidate:

      <Android Studio Installation folder>\plugins\android-ndk\resources\lldb\bin\LLDBFrontend.exe

      Adding that as Debugger in the Debuggers Options fails in DebuggerItem::reinitializeFromFile for several reasons. The most prominent reason is the failing parsing of the version, due to the version number that this lldb build put in front of the version output.

      12.0 lldb version 12.0.0
      clang revision 91322a2ee9dd036d10e1529650dc3ee118dd26c0
      llvm revision 91322a2ee9dd036d10e1529650dc3ee118dd26c0

        For Gerrit Dashboard: QTCREATORBUG-26504
        # Subject Branch Project Status CR V

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes